--- a/css/style.css
+++ b/css/style.css
@@ -282,10 +282,102 @@ section.first-area h3 {
     color: #707070;
 }
 
+section.second-area {
+    display:grid;
+    grid-template-columns: 3fr 1fr;
+    padding: 0 2%;
+    margin-top: 150px;
+}
 
+.box-second-area-left {
+    display:flex;
+    flex-direction: column;
+    padding-right: 30px;
+}
 
+.box-second-area-left h2 {
+    font-family: var(--fonteTitulos);
+    font-size: 40px;
+    margin-bottom: 40px;
+    font-weight: 600;
+}
 
+.features {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
 
+.features img {
+    padding: 15px;
+    margin-right: 20px;
+    width: 62px;
+}
+
+.feature-desc {
+    display: flex;
+    color: #707070;
+}
+
+.box-second-area-right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+section.third-area {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding: 0 2%;
+    margin-top: 150px;
+}
+
+.box-third-area-left {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.box-third-area-left img {
+    width: 350px;
+}
+
+.box-third-area-right {
+    display: flex;
+    flex-direction: column;
+    padding-left: 50px;
+    justify-content: flex-start;
+}
+
+.box-third-area-right h2 {
+    font-family: var(--fonteTitulos);
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.box-third-area-right p {
+    margin-bottom: 20px;
+    color: #707070;
+}
+
+.third-area-icons {
+    display: flex;
+    margin-top: 30px;
+}
+
+.third-area-icons ul li {
+    list-style: none;
+}
+
+.third-area-icons li {
+    display: inline-flex;
+    margin-right: 30px;
+    padding:15px;
+    width: 65px;
+    height: 65px;
+    box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, 0.15);
+}
 
 
 
